2009-07-22  Richard Henderson  <rth@redhat.com>

	* eh_cpp.c: New file.
	* Makefile.am (libitm_la_SOURCES): Add it.
	* Makefile.in: Rebuild.
	* beginend.c (GTM_rollback_transaction): Undo exception state.
	(GTM_trycommit_transaction): Mark inline.
	(GTM_trycommit_and_finalize_transaction): Split out from ...
	(_ITM_commitTransaction): ... here.
	(_ITM_commitTransactionEH): New function.
	* libitm.h (struct gtm_transaction): Add cxa_catch_count,
	cxa_unthrown, eh_in_flight; reorder.

	* testsuite/libitm.c++/c++.exp: New.
	* testsuite/libitm.c++/eh-1.C: New.

	* aatree.c (aa_free): Remove REGPARM.
	* aatree.h: Remove all REGPARM.

2009-07-18  Richard Henderson  <rth@redhat.com>

        * aatree.c, aatree.h, alloc.c, alloc_c.c, alloc_cpp.c: New files.
        * Makefile.am (libitm_la_SOURCES): Add them.
        * Makefile.in: Rebuild.
        * beginend.c (GTM_rollback_transaction): Use GTM_commit_allocations.
        (GTM_trycommit_transaction): Likewise.
        * libitm.h: Include aatree.h
        (struct gtm_alloc_action): New.
        (struct gtm_transaction): Add alloc_actions.
        (GTM_record_allocation, GTM_forget_allocation): Declare.
        (GTM_get_allocation_size, GTM_commit_allocations): Declare.
        * libitm.map (_ITM_malloc, _ITM_calloc, _ITM_realloc, _ITM_free,
        _ZGTtnwm, _ZGTtnam, _ZGTtdlPv, _ZGTtdaPv, _ZGTtnwmRKSt9nothrow_t,
        _ZGTtnamRKSt9nothrow_t, _ZGTtdlPvRKSt9nothrow_t,
        _ZGTtdaPvRKSt9nothrow_t): Export.

2009-07-18  Richard Henderson  <rth@redhat.com>

	* target_tls.h: Move ...
	* config/posix/target_tls.h: ... here.

2009-07-07  Richard Henderson  <rth@redhat.com>

	* config/x86/target.h (atomic_write_barrier): Use sfence if available.

2009-07-07  Richard Henderson  <rth@redhat.com>

	* Update to GPL3.

2009-07-07  Richard Henderson  <rth@redhat.com>

	* libitm.h (struct gtm_transaction): Widen id to _ITM_transactionId_t.
	* beginend.c (global_tid): Widen to _ITM_transactionId_t.
