@@ -1,3 +1,11 @@
+2009-08-03  Richard Henderson  <rth@redhat.com>
+
+	* libitm.map (_ITM_commitTransactionEH, _ITM_cxa_allocate_exception,
+	_ITM_cxa_begin_catch, _ITM_cxa_end_catch, _ITM_cxa_throw): Export.
+	* method-wbetl.c (struct w_entry): Remove mask.
+	(wbetl_write, wbetl_load): Return pointer to word containing the data;
+	adjust all callers.
+
 2009-07-22  Richard Henderson  <rth@redhat.com>
 
 	* eh_cpp.c: New file.
